--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.0"
+    "react-spring-bottom-sheet": "^3.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
