--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bluebirdfs-metricsportal",
+  "name": "bluebirdportal-frontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
